# pv-pan-tool

./: .gitignore  README.md  database_example_usage.py  parsed_files_registry.json  pyproject.toml  test_parser_script.py  test_setup.py
data/pan_files/dummy_mfg/dummy_model/: dummy.pan
desktop_app/: main.py
desktop_app/controllers/: __init__.py  database_controller.py  export_controller.py  search_controller.py
desktop_app/todo/: PV PAN Tool Desktop App - Development Roadmap.md  PV PAN Tool Desktop App - Phase 1 Delivery Summary.md  PV PAN Tool Desktop App - Phase 1.5 Pendings.md
desktop_app/ui/: __init__.py  compare_widget.py  main_window.py  search_widget.py  settings_dialog.py  stats_widget.py
docs/: README.md  configuration.md
docs/commands/: FEATURE_SIZE_FILTERS.md  compare.md  database.md  export.md  info.md  parse.md  search.md  stats.md
scripts/: smoke_check.py
src/pv_pan_tool/: __init__.py  cli.py  database.py  models.py  parser.py
src/pv_pan_tool/cli/: __init__.py  __main__.py  main.py  test_cli.py
src/pv_pan_tool/cli/commands/: __init__.py  compare.py  database.py  export.py  parse.py  search.py  stats.py
src/pv_pan_tool/cli/config/: config.yaml  default.json
src/pv_pan_tool/cli/docs/: Arquitectura de la Interfaz CLI - PV PAN Tool.md  🚀 PV PAN Tool - Guía Completa de la Interfaz CLI.md  🚀 PV PAN Tool CLI - Resumen de Implementación.md
src/pv_pan_tool/cli/utils/: __init__.py  config.py  formatters.py
