[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pv-pan-tool"
version = "0.1.0"
description = "PV Module Comparison Tool - Parse .PAN files and compare solar panel specifications"
authors = ["Developer <developer@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "pv_pan_tool", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
pandas = "^2.0.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
pv-pan-tool = "pv_pan_tool.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pv_pan_tool"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--cov=src/pv_pan_tool", "--cov-report=term-missing"]